Add naive implementation for all functionality

--- a/GiftCertificates/src/main/resources/messages.properties
+++ b/GiftCertificates/src/main/resources/messages.properties
@@ -5,6 +5,7 @@ index.manage_tags=Manage tags
 index.manage_certificates=Manage certificates
 
 view.home=Home
+view.delete=Delete
 
 view.certificates.certificates_info=Certificates info
 view.certificates.certificate_info=Certificate info
@@ -13,6 +14,10 @@ view.certificates.certificates=Certificates
 
 view.tags.tags=Tags
 view.tags.related_certificates=Related certificates
+view.tags.new_tag=New Tag
+view.tags.create_tag=Create a tag
+view.tags.enter_name=Enter name
+
 
 
 
@@ -24,5 +29,16 @@ certificate.duration=Duration
 
 
 tag.name=Name
+view.create=Create
+view.certificates.create_certificate=Create a certificate
+view.certificates.new_certificate=New Certificate
+view.certificates.enter_name=Enter name
+view.certificates.enter_description=Enter description
+view.certificates.enter_price=Enter price
+view.certificates.enter_duration=Enter duration period
+view.edit=Edit
+view.certificates.edit_certificate=Edit Certificate
+view.update=Update
+
 
 
