Fix mapping query resultSet for certificates and tags

--- a/GiftCertificates/src/main/resources/messages.properties
+++ b/GiftCertificates/src/main/resources/messages.properties
@@ -39,6 +39,7 @@ view.certificates.enter_duration=Enter duration period
 view.edit=Edit
 view.certificates.edit_certificate=Edit Certificate
 view.update=Update
+view.certificates.select_tags=Select tags
 
 
 
