--- a/GiftCertificates/src/main/resources/messages.properties
+++ b/GiftCertificates/src/main/resources/messages.properties
@@ -40,6 +40,7 @@ view.edit=Edit
 view.certificates.edit_certificate=Edit Certificate
 view.update=Update
 view.certificates.select_tags=Select tags
+certificate.description=Description
 
 
 
